<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoefficientsActivity">

    <TextView
        android:id="@+id/functionLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Function type"
        app:layout_constraintBottom_toTopOf="@id/aView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/chooseCoefficients"
        app:layout_constraintBottom_toTopOf="@+id/functionLabelView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/aValueEdit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="138dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/bValueEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aView"
        app:layout_constraintTop_toBottomOf="@+id/functionLabelView" />

    <EditText
        android:id="@+id/bValueEdit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="138dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/cValueEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bView"
        app:layout_constraintTop_toBottomOf="@+id/aValueEdit" />

    <EditText
        android:id="@+id/cValueEdit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/beginPeriodEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cView"
        app:layout_constraintTop_toBottomOf="@+id/bValueEdit" />

    <EditText
        android:id="@+id/beginPeriodEdit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/calculationsButton"
        app:layout_constraintEnd_toStartOf="@+id/endPeriodView"
        app:layout_constraintStart_toEndOf="@+id/beginPeriodView"
        app:layout_constraintTop_toBottomOf="@+id/cValueEdit" />

    <EditText
        android:id="@+id/endPeriodEdit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/calculationsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endPeriodView"
        app:layout_constraintTop_toBottomOf="@+id/cValueEdit" />

    <TextView
        android:id="@+id/aView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="28dp"
        android:text="@string/aValue"
        app:layout_constraintBottom_toTopOf="@+id/bView"
        app:layout_constraintEnd_toStartOf="@+id/aValueEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/functionLabelView" />

    <TextView
        android:id="@+id/bView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="28dp"
        android:text="@string/bValue"
        app:layout_constraintBottom_toTopOf="@+id/cView"
        app:layout_constraintEnd_toStartOf="@+id/bValueEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aView" />

    <TextView
        android:id="@+id/cView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="37dp"
        android:text="@string/cValue"
        app:layout_constraintBottom_toTopOf="@+id/beginPeriodView"
        app:layout_constraintEnd_toStartOf="@+id/cValueEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="102dp"
        android:onClick="goBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calculationsButton"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginPeriodView" />

    <Button
        android:id="@+id/calculationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:onClick="goToCalculations"
        android:text="@string/calculations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/beginPeriodEdit" />

    <TextView
        android:id="@+id/beginPeriodView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:text="@string/coefficientsFrom"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/beginPeriodEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cView" />

    <TextView
        android:id="@+id/endPeriodView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="66dp"
        android:text="to"
        app:layout_constraintBottom_toTopOf="@+id/calculationsButton"
        app:layout_constraintEnd_toStartOf="@+id/endPeriodEdit"
        app:layout_constraintStart_toEndOf="@+id/beginPeriodEdit"
        app:layout_constraintTop_toBottomOf="@+id/cValueEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>